--- a/main.ipynb
+++ b/main.ipynb
@@ -542,8 +542,8 @@
     "x = layers.LayerNormalization()(x)\n",
     "x = layers.ReLU()(x)\n",
     "\n",
-    "# Final convolution layer\n",
-    "x = layers.Conv2D(3, kernel_size=7, padding=\"same\", use_bias=True)(x)\n",
+    "# Final convolution layer    x = layers.LayerNormalization()(x)\n",
+    "#     x = layers.Add()([x, res])  # Skip connection\n",
     "\n",
     "# Skip connection and tanh activation\n",
     "x = layers.Add()([x, input_image])  # Assuming you want to add a skip connection with the original image\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m xin \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mInput(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m256\u001b[39m, \u001b[38;5;241m256\u001b[39m, \u001b[38;5;241m3\u001b[39m))  \u001b[38;5;66;03m# Image input\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Initial convolution block\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReflectionPadding2D\u001b[49m(padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)(xin)  \u001b[38;5;66;03m# Reflection padding\u001b[39;00m\n\u001b[1;32m      9\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mConv2D(\u001b[38;5;241m64\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalid\u001b[39m\u001b[38;5;124m\"\u001b[39m, use_bias\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)(x)\n\u001b[1;32m     10\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mLayerNormalization()(x)\n",
+      "Cell \u001b[0;32mIn[36], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m xin \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mInput(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m256\u001b[39m, \u001b[38;5;241m256\u001b[39m, \u001b[38;5;241m3\u001b[39m))  \u001b[38;5;66;03m# Image input\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Initial convolution block\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReflectionPadding2D\u001b[49m(padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)(xin)  \u001b[38;5;66;03m# Reflection padding\u001b[39;00m\n\u001b[1;32m     19\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mConv2D(\u001b[38;5;241m64\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalid\u001b[39m\u001b[38;5;124m\"\u001b[39m, use_bias\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)(x)\n\u001b[1;32m     20\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mLayerNormalization()(x)\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'keras._tf_keras.keras.layers' has no attribute 'ReflectionPadding2D'"
      ]
     }
@@ -577,11 +577,21 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, Model\n",
     "\n",
+    "class ReflectionPadding2D(layers.Layer):\n",
+    "    def __init__(self, padding=1):\n",
+    "        super(ReflectionPadding2D, self).__init__()\n",
+    "        self.padding = padding\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        return tf.image.resize_with_crop_or_pad(inputs, \n",
+    "                                                inputs.shape[1] + 2 * self.padding, \n",
+    "                                                inputs.shape[2] + 2 * self.padding)\n",
+    "\n",
     "# Input layer\n",
     "xin = layers.Input(shape=(256, 256, 3))  # Image input\n",
     "\n",
     "# Initial convolution block\n",
-    "x = layers.ReflectionPadding2D(padding=3)(xin)  # Reflection padding\n",
+    "x = ReflectionPadding2D(padding=3)(xin)  # Reflection padding\n",
     "x = layers.Conv2D(64, kernel_size=7, padding=\"valid\", use_bias=False)(x)\n",
     "x = layers.LayerNormalization()(x)\n",
     "x = layers.ReLU()(x)\n",
@@ -595,7 +605,6 @@
     "x = layers.LayerNormalization()(x)\n",
     "x = layers.ReLU()(x)\n",
     "\n",
-    "# Residual Blocks\n",
     "for _ in range(9):\n",
     "    res = x\n",
     "    x = layers.Conv2D(256, kernel_size=3, padding=\"same\")(x)\n",
@@ -604,6 +613,11 @@
     "    x = layers.Conv2D(256, kernel_size=3, padding=\"same\")(x)\n",
     "    x = layers.LayerNormalization()(x)\n",
     "    x = layers.Add()([x, res])  # Skip connection\n",
+    "\n",
+    "\n",
+    "# # Residual blocks\n",
+    "# for _ in range(9):\n",
+    "#     x = ResidualBlock(256)(x)\n",
     "\n",
     "# Upsampling layers\n",
     "x = layers.Conv2DTranspose(128, kernel_size=3, strides=2, padding=\"same\", output_padding=1, use_bias=False)(x)\n",
@@ -615,7 +629,7 @@
     "x = layers.ReLU()(x)\n",
     "\n",
     "# Final convolution layer\n",
-    "x = layers.ReflectionPadding2D(padding=3)(x)\n",
+    "x = ReflectionPadding2D(padding=3)(x)\n",
     "x = layers.Conv2D(3, kernel_size=7, padding=\"valid\", use_bias=True)(x)\n",
     "\n",
     "# Skip connection and activation\n",
@@ -625,8 +639,7 @@
     "# Create the model\n",
     "model = Model(inputs=xin, outputs=xout)\n",
     "\n",
-    "# Print the model summary\n",
-    "mo\n"
+    "model.summary()"
    ]
   },
   {
